# omelet-flutter

./: .gitignore  README.md  pubspec.yaml
android/: build.gradle
android/app/: build.gradle
android/app/src/debug/: AndroidManifest.xml
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/jacob/omelet/: MainActivity.kt
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/common/: ffi.dart  index.dart  log.dart  media_query.dart  r.dart  ts.dart  utils.dart
lib/ext/: index.dart
lib/pages/image_joint/: Image_joint_main_viewer.dart  image_args_page.dart  image_editor_painter.dart  image_joint_page.dart  image_joint_presets.dart  image_joint_settings_page.dart  image_reorder_page.dart  images_edit_page.dart  joint_item.dart  text_item_editor.dart
lib/painter/: image_editor.dart
lib/widgets/: cell.dart  hover.dart
rust_lib/: Cargo.toml
rust_lib/src/: lib.rs
test/: widget_test.dart
web/: index.html  manifest.json
